force-app/main/default/objects/Customer_Portfolio/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <required>true</required>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
</CustomField>