force-app/main/default/objects/Customer_Portfolio/fields/IsFavorite__c.field-meta.xml
<CustomField>
    <fullName>IsFavorite__c</fullName>
    <label>Is Favorite</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>