force-app/main/default/objects/Customer_Portfolio/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <required>true</required>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
</CustomField>