force-app/main/default/objects/Customer_Portfolio/recordTypes/External.recordType-meta.xml
<RecordType>
    <active>true</active>
    <description>Access assigned externally via third-party system</description>
    <label>External</label>
    <fullName>External</fullName>
</RecordType>