force-app/main/default/objects/Customer_Portfolio/recordTypes/Internal.recordType-meta.xml
<RecordType>
    <active>true</active>
    <description>Access assigned internally via role hierarchy</description>
    <label>Internal</label>
    <fullName>Internal</fullName>
</RecordType>