force-app/main/default/objects/Customer_Portfolio/listViews/Customer_Portfolio__c-All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <label>All</label>
    <filterScope>Everything</filterScope>
    <columns>
        <field>User__c</field>
        <field>Customer__c</field>
        <field>Source__c</field>
        <field>IsFavorite__c</field>
        <field>ExternalId__c</field>
        <field>CreatedDate</field>
    </columns>
</ListView>